fixed annoying jumping list item animation

--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -122,19 +122,20 @@ form{
 		-ms-transition: all 0.5s ease-in-out;
 		transition: all 0.5s ease-in-out;
 		color: white;
-
+		
 		.active{
 			padding: 8px;
-			max-height: 500px;
+			max-height: 600px;
     		opacity: 1;
 			transition: all 0.5s ease-in-out;
+			overflow: hidden;
 		}
 
 		.inactive{
 			max-height: 0px;
 			opacity: 0;
-			overflow: hidden;
 			transition: all 0.5s ease-in-out;
+			overflow: hidden;
 		}
 	}
 
@@ -146,7 +147,7 @@ form{
 		font-family: 'Helvetica Neue', sans-serif; 
 		font-weight: bold; 
 
-		position:relative;
+		position : relative;
 		a {
 			position: absolute;
 			top: 0;
